# Percipio

./: README.md  pyproject.toml
examples/: 01_basic_inference.py  02_cleaning_and_transform.py  03_custom_types.py  04_pandas_integration.py  05_llm_inference.py
percipio/: __init__.py  built_in_types.py  core.py  llm_engine.py  types.py
